--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
         "@symfony/stimulus-bridge": "^4.0.0",
         "@symfony/webpack-encore": "^4.0.0",
         "core-js": "^3.23.0",
+        "postcss-loader": "8.1.0",
         "regenerator-runtime": "^0.13.9",
+        "sass": "^1.93.2",
+        "sass-loader": "14.0.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
@@ -20,10 +23,14 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "6.0.0",
+        "@fortawesome/fontawesome-free": "^7.1.0",
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.8",
+        "bootstrap": "4.6.0",
+        "chart.js": "^4.5.1",
         "headroom.js": "^0.12.0",
-        "jquery": "^3.7.1"
+        "jquery": "3.5.1",
+        "jquery.easing": "1.4.1",
+        "popper.js": "^1.16.1",
+        "startbootstrap-sb-admin-2": "4.1.4"
     }
 }
