--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.5",
         "doctrine/orm": "^2.20",
+        "dompdf/dompdf": "^3.1",
         "fortawesome/font-awesome": "^7.1",
+        "phpoffice/phpspreadsheet": "^2.1",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
