creation des donne de locataire

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,9 +39,9 @@ security:
     role_hierarchy:
         ROLE_ADMIN_ADMIN: [ROLE_DIRECTEUR_GENERAL, ROLE_COMPTABLE, ROLE_GESTIONNAIRE_LOGISTIQUE, ROLE_CAISSIER, ROLE_USER]
         ROLE_DIRECTEUR_GENERAL: [ROLE_COMPTABLE, ROLE_GESTIONNAIRE_LOGISTIQUE, ROLE_CAISSIER, ROLE_USER]
-        ROLE_COMPTABLE: ROLE_USER
-        ROLE_GESTIONNAIRE_LOGISTIQUE: ROLE_USER
-        ROLE_CAISSIER: ROLE_USER
+        ROLE_COMPTABLE: [ROLE_COMPTABLE]
+        ROLE_GESTIONNAIRE_LOGISTIQUE: [ROLE_GESTIONNAIRE_LOGISTIQUE]
+        ROLE_CAISSIER: [ROLE_CAISSIER]
 
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
