--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,23 +37,32 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     role_hierarchy:
-        ROLE_ADMIN_ADMIN: [ROLE_DIRECTEUR_GENERAL, ROLE_COMPTABLE, ROLE_GESTIONNAIRE_LOGISTIQUE, ROLE_CAISSIER, ROLE_USER]
-        ROLE_DIRECTEUR_GENERAL: [ROLE_COMPTABLE, ROLE_GESTIONNAIRE_LOGISTIQUE, ROLE_CAISSIER, ROLE_USER]
+        ROLE_ADMIN_ADMIN: [ROLE_DIRECTEUR_GENERALE, ROLE_COMPTABLE, ROLE_GESTIONNAIRE_LOGISTIQUE, ROLE_CAISSIER, ROLE_USER]
+        ROLE_DIRECTEUR_GENERALE: [ROLE_COMPTABLE, ROLE_GESTIONNAIRE_LOGISTIQUE, ROLE_CAISSIER, ROLE_USER]
         ROLE_COMPTABLE: [ROLE_COMPTABLE]
         ROLE_GESTIONNAIRE_LOGISTIQUE: [ROLE_GESTIONNAIRE_LOGISTIQUE]
         ROLE_CAISSIER: [ROLE_CAISSIER]
 
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/logout, roles: PUBLIC_ACCESS }
+        - { path: ^/home/choix, roles: PUBLIC_ACCESS }
         - { path: ^/register, roles: PUBLIC_ACCESS }
+        - { path: ^/agence, roles: PUBLIC_ACCESS }
+        - { path: ^/dashboard, roles: PUBLIC_ACCESS }
+        - { path: ^/contact, roles: PUBLIC_ACCESS }
+        - { path: ^/about, roles: PUBLIC_ACCESS }
+        - { path: ^/home, roles: PUBLIC_ACCESS }
         - { path: ^/$, roles: PUBLIC_ACCESS }
-        - { path: ^/directeur, roles: ROLE_DIRECTEUR_GENERAL }
+        - { path: ^/directeur, roles: ROLE_DIRECTEUR_GENERALE }
         - { path: ^/comptable, roles: ROLE_COMPTABLE }
         - { path: ^/gestionnaire, roles: ROLE_GESTIONNAIRE_LOGISTIQUE }
         - { path: ^/caisse, roles: ROLE_CAISSIER }
+        - { path: ^/vente, roles: ROLE_CAISSIER }
+        - { path: ^/achat, roles: ROLE_CAISSIER }
         - { path: ^/lecture, roles: ROLE_USER }
         - { path: ^/, roles: ROLE_ADMIN_ADMIN }
-        #- { path: ^/, roles: ROLE_ADMIN_ADMIN }
+        
 
 when@test:
     security:
