--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "beberlei/doctrineextensions": "^1.5",
         "components/jquery": "^3.7",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.13",
